--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 
 body {
-    background-color: greenyellow;
+    background-color: orange;
     text-align: center;
     font-family: 'Comforter', cursive;
     font-family: 'Shadows Into Light', cursive;
